fixed some spacing

--- a/index.css
+++ b/index.css
@@ -126,7 +126,7 @@ a:hover {
   background: linear-gradient(0deg, #98BABB 0%, white 2%, #98BABB 20%, white 22%, #98BABB 35%, white 37%, #98BABB 50%, white 52%, #98BABB 65%, white 67%, #98BABB 80%, white 82%, #98BABB 95%);
   background-size: 400% 400%;
   animation: Animation 15s linear infinite;
-  max-height: 900px;
+  max-height: 1000px;
   max-width: 350px;
   padding: 10px;
 }
@@ -171,6 +171,14 @@ footer {
 
 .wrapper h3 {
   color: #193441;
+}
+
+#zen-benefits p {
+  margin-top: 0;
+}
+
+#zen-explanation p {
+  margin-top: 0;
 }
 
 @media only screen and (min-width: 768px) {
